sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:15: error: value fin is not a member of Unit
possible cause: maybe a semicolon is missing before `value fin'?
    }fin=fin-1
     ^AlgCocktailSort2:24: error: value debut is not a member of Unit
possible cause: maybe a semicolon is missing before `value debut'?
    }debut=debut+1 
     ^